--- a/templates/mainhub/login.html
+++ b/templates/mainhub/login.html
@@ -1,14 +1,16 @@
 {% extends "main_layout.html" %}
 {% block content %}
+    <br>
     <form method="post" action="/login">
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">username</label>
-            <input required name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div class="form-floating mb-3">
+            <input required name="username" type="text" class="form-control" id="floatingInput" placeholder="username">
+            <label for="floatingInput">Username</label>
         </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input required name="password" type="password" class="form-control" id="exampleInputPassword1">
+        <div class="form-floating">
+            <input required name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <br>
+        <button type="submit" class="btn btn-primary">login</button>
     </form>
 {% endblock content %}
