added delete button

--- a/templates/devhub/admin.html
+++ b/templates/devhub/admin.html
@@ -14,10 +14,11 @@
         
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{item['titel']}}</h5>
-            <small>{{item['user']}}</small>
+            <small>developer: {{item['user']}}</small>
           </div>
           <p class="mb-1">{{item['content']}}</p>
-          <small>{{item['status']}}</small>
+          <small class="mb-1">{{item['status']}}</small>
+          
         </a>
     {% endfor %}
     </div>
