--- a/templates/devhub/index.html
+++ b/templates/devhub/index.html
@@ -1,4 +1,23 @@
 {% extends "main_layout.html" %}
 {% block content %}
-
+<br>
+<div class="list-group">
+    {% for item in blogs %}
+        {% if item['status'] == 'done' %}
+        <a href="/dev_view?id={{item['id']}}" class="{{item['user']}} list-group-item list-group-item-action list-group-item-success" aria-current="true">
+        {% elif item['status'] == 'started'%}
+        <a href="/dev_view?id={{item['id']}}" class="{{item['user']}} list-group-item list-group-item-action list-group-item-primary" aria-current="true">
+        {% else %}
+        <a href="/dev_view?id={{item['id']}}" class="{{item['user']}} list-group-item list-group-item-action" aria-current="true">
+        {% endif %}
+        
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">{{item['titel']}}</h5>
+          </div>
+          <p class="mb-1">{{item['content']}}</p>
+          <small class="mb-1">{{item['status']}}</small>
+          
+        </a>
+    {% endfor %}
+    </div>
 {% endblock content %}
